tooling/nargo_cli/tests/snapshots/execution_success/regression_5045/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "is_active",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _12",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [_0]:1 bits []",
    "EXPR [ (-1, _0) (-1, _1) 1 ]",
    "EXPR [ (-17631683881184975370165255887551781615748388533673675138855, _0) (-1, _2) 17631683881184975370165255887551781615748388533673675138860 ]",
    "EXPR [ (-1, _3) 0 ]",
    "BLACKBOX::EMBEDDED_CURVE_ADD [_1, _2, _3, _1, _2, _3, 1] [_4, _5, _6]",
    "BLACKBOX::MULTI_SCALAR_MUL [-8519034168028805793603472410045416908800114122389094750979358290384607299995, 2726875754519434671146873023426441956600113087238248464305840046775215989920, _1, 0, 5, _1, 1, 0, 1, 0, _0] [_7, _8, _9]",
    "EXPR [ (-1, _4) (1, _7) (-1, _10) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _10) 0 ]], outputs: [_11]",
    "EXPR [ (1, _10, _11) (1, _12) -1 ]",
    "EXPR [ (1, _10, _12) 0 ]",
    "EXPR [ (1, _0, _12) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
